[gd_scene load_steps=12 format=3 uid="uid://c6qnjpqg33mhg"]

[ext_resource type="Script" path="res://test scenes/combat/combat.gd" id="1_o20eq"]
[ext_resource type="Script" path="res://src/scripts/MonsterData.gd" id="2_n0dvl"]
[ext_resource type="Texture2D" uid="uid://druax0t1ex102" path="res://test scenes/combat/backgrounds/forest.png" id="2_otcaw"]
[ext_resource type="Script" path="res://test scenes/combat/combatants/combatants_list.gd" id="3_611aq"]
[ext_resource type="Script" path="res://test scenes/combat/combatants/turn_queue.gd" id="4_3hk0a"]
[ext_resource type="Script" path="res://test scenes/combat/combatants/battle_ui.gd" id="5_6wtr4"]
[ext_resource type="Resource" uid="uid://btsewgj1lhido" path="res://src/monsters/finsta.tres" id="5_slllu"]
[ext_resource type="Resource" uid="uid://b7fvuuyo6744t" path="res://src/monsters/sparchu.tres" id="6_0gd0y"]
[ext_resource type="FontFile" uid="uid://bvry3xxuyun5w" path="res://src/assets/fonts/dogicapixelbold.otf" id="9_2s5qb"]
[ext_resource type="PackedScene" uid="uid://buuy6d8wo8rwq" path="res://src/scenes/ui/move select/option/button.tscn" id="10_3jw8u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxxf0"]
bg_color = Color(0, 0, 0, 0.407843)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Combat" type="Node2D"]
script = ExtResource("1_o20eq")
test_fighters = Array[ExtResource("2_n0dvl")]([ExtResource("6_0gd0y"), ExtResource("5_slllu")])

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_otcaw")

[node name="Combatants" type="Node2D" parent="."]
script = ExtResource("3_611aq")

[node name="PlayerMarker" type="Marker2D" parent="Combatants"]
position = Vector2(192, 384)
scale = Vector2(-2, 2)

[node name="OpponentMarker" type="Marker2D" parent="Combatants"]
position = Vector2(960, 256)

[node name="TurnQueue" type="Node" parent="." node_paths=PackedStringArray("combatants_list")]
script = ExtResource("4_3hk0a")
combatants_list = NodePath("../Combatants")

[node name="Battle UI" type="CanvasLayer" parent="."]
script = ExtResource("5_6wtr4")

[node name="Window" type="Window" parent="Battle UI"]
transparent_bg = true
initial_position = 2
size = Vector2i(500, 500)
transient = true
transparent = true

[node name="Control" type="ScrollContainer" parent="Battle UI/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnQueueLabel" type="RichTextLabel" parent="Battle UI/Window/Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
bbcode_enabled = true
text = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Battle UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Combatant UI" type="HBoxContainer" parent="Battle UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 320

[node name="Control" type="Control" parent="Battle UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 384.0
offset_right = 1088.0
offset_bottom = 576.0

[node name="PanelContainer" type="PanelContainer" parent="Battle UI/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -160.0
offset_right = 32.0
offset_bottom = 152.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mxxf0")

[node name="MarginContainer" type="MarginContainer" parent="Battle UI/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Actions" type="GridContainer" parent="Battle UI/Control/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="Attack" type="Button" parent="Battle UI/Control/PanelContainer/MarginContainer/Actions"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_2s5qb")
theme_override_font_sizes/font_size = 16
text = "Attack"

[node name="UseItem" type="Button" parent="Battle UI/Control/PanelContainer/MarginContainer/Actions"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_2s5qb")
theme_override_font_sizes/font_size = 16
text = "Item"

[node name="Party" type="Button" parent="Battle UI/Control/PanelContainer/MarginContainer/Actions"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_2s5qb")
theme_override_font_sizes/font_size = 16
text = "Party"

[node name="Flee" type="Button" parent="Battle UI/Control/PanelContainer/MarginContainer/Actions"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_2s5qb")
theme_override_font_sizes/font_size = 16
text = "Flee"

[node name="MoveList" type="GridContainer" parent="Battle UI/Control/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="Button" parent="Battle UI/Control/PanelContainer/MarginContainer/MoveList" instance=ExtResource("10_3jw8u")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" parent="Battle UI/Control/PanelContainer/MarginContainer/MoveList" instance=ExtResource("10_3jw8u")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" parent="Battle UI/Control/PanelContainer/MarginContainer/MoveList" instance=ExtResource("10_3jw8u")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" parent="Battle UI/Control/PanelContainer/MarginContainer/MoveList" instance=ExtResource("10_3jw8u")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Battle UI/Control/PanelContainer/MarginContainer/Actions/Attack" to="Battle UI" method="_on_attack_pressed"]
[connection signal="pressed" from="Battle UI/Control/PanelContainer/MarginContainer/Actions/UseItem" to="Battle UI" method="_on_use_item_pressed"]
[connection signal="pressed" from="Battle UI/Control/PanelContainer/MarginContainer/Actions/Party" to="Battle UI" method="_on_party_pressed"]
[connection signal="pressed" from="Battle UI/Control/PanelContainer/MarginContainer/Actions/Flee" to="Battle UI" method="_on_flee_pressed"]
